@@ -15,6 +15,7 @@
 *                   Phong Vo <kpv@research.att.com>                    *
 *                  Martijn Dekker <martijn@inlv.org>                   *
 *            Johnothan King <johnothanking@protonmail.com>             *
+*                      Phi <phi.debian@gmail.com>                      *
 *                                                                      *
 ***********************************************************************/
 #include	"sfhdr.h"
@@ -43,6 +44,9 @@ static Fmtpos_t* sffmtpos(Sfio_t* f,const char* form,va_list args,Sffmt_t* ft,in
 	Sffmt_t		savft;
 	Fmtpos_t*	fp;	/* position array of arguments	*/
 	int		argp, argn, maxp, need[FP_INDEX];
+	int		nargs;	/* the argv[] index of the last seen sequential % format (% or *) */
+	int		xargs;	/* highest (max) argv[] index see in an indexed format (%x$ *x$)  */
+	int		nextarg;
 	SFMBDCL(fmbs)
 
 	if(type < 0)
@@ -51,6 +55,7 @@ static Fmtpos_t* sffmtpos(Sfio_t* f,const char* form,va_list args,Sffmt_t* ft,in
 		return NULL;
 
 	dollar = decimal = thousand = 0; argn = maxp = -1;
+	nargs = xargs = -1;
 	SFMBCLR(&fmbs);
 	while((n = *form) )
 	{	if(n != '%') /* collect the non-pattern chars */
@@ -81,8 +86,9 @@ static Fmtpos_t* sffmtpos(Sfio_t* f,const char* form,va_list args,Sffmt_t* ft,in
 			if(*sp == '$')
 			{	dollar = 1;
 				form = sp+1;
+				if(argp > xargs)
+					xargs = argp;
 			}
-			else	argp = -1;
 		}
 
 		flags = dot = 0;
@@ -114,10 +120,12 @@ static Fmtpos_t* sffmtpos(Sfio_t* f,const char* form,va_list args,Sffmt_t* ft,in
 					if(*t_str == '*')
 					{	t_str = sffmtint(t_str+1,&n);
 						if(*t_str == '$')
-							dollar = 1;
-						else	n = -1;
-						if((n = FP_SET(n,argn)) > maxp)
-							maxp = n;
+						{	dollar = 1;
+							if(n > xargs)
+								xargs = n;
+						}
+						if(n < 0)
+							n = ++nargs;
 						if(fp && fp[n].ft.fmt == 0)
 						{	fp[n].ft.fmt = LEFTP;
 							fp[n].ft.form = (char*)form;
@@ -170,10 +178,11 @@ static Fmtpos_t* sffmtpos(Sfio_t* f,const char* form,va_list args,Sffmt_t* ft,in
 			if(*form == '$' )
 			{	dollar = 1;
 				form += 1;
+				if(n > xargs)
+					xargs = n;
 			}
-			else	n = -1;
-			if((n = FP_SET(n,argn)) > maxp)
-				maxp = n;
+			if(n < 0)
+				n = ++nargs;
 			if(fp && fp[n].ft.fmt == 0)
 			{	fp[n].ft.fmt = '.';
 				fp[n].ft.size = dot;
@@ -208,10 +217,11 @@ static Fmtpos_t* sffmtpos(Sfio_t* f,const char* form,va_list args,Sffmt_t* ft,in
 				if(*form == '$' )
 				{	dollar = 1;
 					form += 1;
+					if(n > xargs)
+						xargs=n;
 				}
-				else	n = -1;
-				if((n = FP_SET(n,argn)) > maxp)
-					maxp = n;
+				if(n < 0)
+					n = ++nargs;
 				if(fp && fp[n].ft.fmt == 0)
 				{	fp[n].ft.fmt = 'I';
 					fp[n].ft.size = sizeof(int);
@@ -293,8 +303,8 @@ static Fmtpos_t* sffmtpos(Sfio_t* f,const char* form,va_list args,Sffmt_t* ft,in
 		if(skip)
 			continue;
 
-		if((argp = FP_SET(argp,argn)) > maxp)
-			maxp = argp;
+		if(argp < 0)
+			argp = ++nargs;
 
 		if(dollar && fmt == '!')
 			return NULL;
@@ -314,6 +324,7 @@ static Fmtpos_t* sffmtpos(Sfio_t* f,const char* form,va_list args,Sffmt_t* ft,in
 		}
 	}
 
+	maxp = nargs > xargs ? nargs : xargs;
 	if(!fp) /* constructing position array only */
 	{	if(!dollar || !(fp = (Fmtpos_t*)malloc((maxp+1)*sizeof(Fmtpos_t))) )
 			return NULL;
@@ -324,7 +335,10 @@ static Fmtpos_t* sffmtpos(Sfio_t* f,const char* form,va_list args,Sffmt_t* ft,in
 
 	/* get value for positions */
 	if(ft)
+	{	if(ft->reloadf)
+			nextarg = (*ft->reloadf)(0, 0, NULL, ft);
 		memcpy(&savft, ft, sizeof(*ft));
+	}
 	for(n = 0; n <= maxp; ++n)
 	{	if(fp[n].ft.fmt == 0) /* gap: pretend it's a 'd' pattern */
 		{	fp[n].ft.fmt = 'd';
@@ -343,6 +357,7 @@ static Fmtpos_t* sffmtpos(Sfio_t* f,const char* form,va_list args,Sffmt_t* ft,in
 		{	fp[n].ft.version = ft->version;
 			fp[n].ft.extf = ft->extf;
 			fp[n].ft.eventf = ft->eventf;
+			fp[n].ft.reloadf = ft->reloadf;
 			if((v = fp[n].need[FP_WIDTH]) >= 0 && v < n)
 				fp[n].ft.width = fp[v].argv.i;
 			if((v = fp[n].need[FP_PRECIS]) >= 0 && v < n)
@@ -447,7 +462,10 @@ static Fmtpos_t* sffmtpos(Sfio_t* f,const char* form,va_list args,Sffmt_t* ft,in
 	}
 
 	if(ft)
+	{	if(ft->reloadf)
+			(*ft->reloadf)(nextarg, 0, NULL, ft);
 		memcpy(ft,&savft,sizeof(Sffmt_t));
+	}
 	return fp;
 }
 
